Closed Bug 399468 Opened 18 years ago Closed 18 years ago

Can open multiple bookmark popups on clicking folders after right-click context menu

Categories

(Firefox :: Menus, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Firefox 3 beta2

People

(Reporter: martijn.martijn, Assigned: enndeakin)

References

Details

(Keywords: regression)

Attachments

(1 file)

To reproduce: - Open Bookmarks menu - Right-click on a bookmark - Click on one or more folders Actual result: - Folder opens, but context menu stays open too. When clicking on more folders, more folder popups open, but the previous ones don't close. Expected result: - Folder opens and the context menu should disappear.
Is this a regression?
Yes, this regressed between 2007-07-04 and 2007-07-05, so I guess a regression from bug 279703.
Blocks: 279703
Keywords: regression
This is an easy fix but I also notice a regression of bug 385616 while testing the fix which I'm going to investigate as well as both involve the same block of code. Sadly, we can't make automnated tests here as they require a means of sending native messages to a window.
Status: NEW → ASSIGNED
When building the list of widgets for the open submenus, stop when reaching a menu that is not a context menu. This way, the parent non-context menu (the bookmarks menu in this test) isn't considered part of the menu chain, and the mouse click causes the menus to roll up rather than fire the mousedown at the menu.
Assignee: nobody → enndeakin
Attachment #285106 - Flags: superreview?(bzbarsky)
Attachment #285106 - Flags: review?(bzbarsky)
Comment on attachment 285106 [details] [diff] [review] check context menu state Sure. It's worth finding someone else to learn this code so you don't have to rely on me for all the reviews... Pretty soon now those are going to be very laggy.
Attachment #285106 - Flags: superreview?(bzbarsky)
Attachment #285106 - Flags: superreview+
Attachment #285106 - Flags: review?(bzbarsky)
Attachment #285106 - Flags: review+
Flags: blocking-firefox3?
Flags: blocking-firefox3? → blocking-firefox3+
Attachment #285106 - Flags: approval1.9?
Comment on attachment 285106 [details] [diff] [review] check context menu state a=endgame drivers for after M9 freeze
Attachment #285106 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Target Milestone: --- → Firefox 3 M10
Checking in layout/xul/base/src/nsXULPopupManager.cpp; /cvsroot/mozilla/layout/xul/base/src/nsXULPopupManager.cpp,v <-- nsXULPopupManager.cpp new revision: 1.32; previous revision: 1.31 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Flags: in-litmus?
Verified fix on Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b2) Gecko/2007121014 Firefox/3.0b2
Status: RESOLVED → VERIFIED
Blocks: 404766
Test case https://litmus.mozilla.org/show_test.cgi?id=7480 has been created on litmus for any future regression testing on this bug.
Flags: in-litmus? → in-litmus+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: