Bug 399468 - Can open multiple bookmark popups on clicking folders after right-click context menu (check context menu state) [p=enndeakin r+sr=bzbarsky a1.9=beltzner]